force-app/main/default/objects/Guest_Account__c/Guest_Account__c.object-meta.xml
<CustomObject>
    <label>Guest Account</label>
    <nameField>
        <displayFormat>G-ACC-{000}</displayFormat>
        <label>Guest Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>