force-app/main/default/objects/Guest_Account__c/fields/Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>