force-app/main/default/objects/Guest_Account__c/fields/Agreement_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed_By__c</fullName>
    <label>Agreement Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>