force-app/main/default/objects/Guest_Account__c/fields/Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed_Date__c</fullName>
    <label>Agreement Signed Date</label>
    <type>Date</type>
</CustomField>