force-app/main/default/objects/Guest_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>Agreement_Signed__c</columns>
    <columns>Agreement_Signed_By__c</columns>
    <columns>Agreement_Signed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>